<resources>
    <string name="app_name">TareasTO</string>
    <string name="title_activity_main">TareasTO</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_prueba">ActivityPrueba</string>
    <string name="Boton1">Listo</string>
    <string name="customize">Ajustar</string>
    <string name="show_dialog">Dialogo</string>
    <string name="undo">Deshacer</string>
    <string name="title_activity_item">Nuevo Item</string>
    <string name="nombre">Nombre:</string>
    <string name="descripcion">Detalles:</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="itemt">Detalle  nuevo item</string>
    <string name="agregar">Agregar</string>
    <string name="nada">Vacio</string>
    <string name="imagen">Imagen</string>
    <string name="selecimagen">Seleccionar Imagen</string>
    <string name="title_activity_activity_img">ActivityIMG</string>
    <string name="estado">Listo</string>
    <string name="alarma">Alarma</string>
    <string name="hora">Hora</string>
    <string name="eliminar">Eliminar</string>
    <string name="varios">Varias Tareas</string>
    <string name="acerca">Acerca de TareasTO</string>
    <string name="title_activity_activity_about">ActivityAbout</string>
    <string name="agradecimientos">Agradecimientos a:\n\n- Caldroid: Libreria de calendarios.\n\n- Iconos: Designed by Freepik.\n\n-Stackoverflow: De mucha ayuda.</string>
</resources>
