<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButtondel"
        android:contentDescription="@string/eliminar"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/imageView"
            android:src="@android:drawable/ic_dialog_alert"
            android:contentDescription="@string/imagen" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/hora"
            android:id="@+id/textViewCLK" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textView_superior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_inferior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcion"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>


    <CheckBox
            android:layout_width="40dp"
            android:layout_height="60dp"
            android:id="@+id/cbalarm"
            android:background="@android:drawable/ic_popup_reminder"
            android:layout_marginTop="20dp" />


    <CheckBox
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/checkBox"
        android:layout_marginTop="20dp"
        android:background="@android:drawable/btn_star_big_on" />

</LinearLayout>