<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textview1"
            android:textSize="18sp"
            android:layout_weight="2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agregar"
            android:id="@+id/button2"
            android:layout_marginLeft="64dp"
            android:onClick="agregar"
            android:layout_weight="2" />


    </LinearLayout>


    <ListView
        android:id="@+id/ListView_listado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>



    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Boton1"
        android:id="@+id/button"
        android:layout_marginTop="15dp"
        android:onClick="finalizar" />

</LinearLayout>
