<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/itemt"
        android:id="@+id/tvitem0"
        android:textSize="32sp"
        android:layout_marginBottom="12sp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/nombre"

        android:id="@+id/tvitem1"
        android:layout_weight="2" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/etitem1"
        android:hint="@string/nombre"
        android:inputType="text"
        android:layout_weight="1" />
    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/descripcion"
        android:id="@+id/tvitem2"
        android:layout_weight="4" />-->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/etitem2"
        android:hint="@string/descripcion"
        android:inputType="text"
        android:layout_weight="1.3" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/imageView2"
            android:contentDescription="@string/imagen"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/selecimagen"
            android:id="@+id/buttonimg"
            android:onClick="selec"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="6.5"
        android:minHeight="20dp">

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/timePicker"
            android:layout_gravity="center_horizontal"
            android:layout_weight="4" />

        <CheckBox
            android:layout_width="60dp"
            android:layout_height="90dp"
            android:id="@+id/cbalarmi"
            android:background="@android:drawable/ic_popup_reminder"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar"
            android:id="@+id/buttonit1"
            android:onClick="aceptar"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"
            android:id="@+id/buttonit2"
            android:onClick="cancelar"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
